crates/swc_css_parser/tests/errors/percent/minus/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/percent/minus/input.css:1:14
  |
1 | a { width: -0.%; }
  |              ^

error: Expected Declaration value
 --> $DIR/tests/errors/percent/minus/input.css:1:15
  |
1 | a { width: -0.%; }
  |               ^

